--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -20,8 +20,8 @@
 <resources>
 
     <color name="owncloud_blue">@color/actionbar_start_color</color>
-    <color name="owncloud_blue_accent">#007CC2</color>
-    <color name="owncloud_blue_bright">#00ddff</color>
+    <color name="owncloud_blue_accent">#714fe3</color>
+    <color name="owncloud_blue_bright">#a691ee</color>
 
     <color name="list_item_lastmod_and_filesize_text">@color/secondaryTextColor</color>
     <color name="black">#000000</color>
@@ -50,6 +50,6 @@
     <color name="primary_dark">#006AA3</color>
 
     <!-- special transparent action bar colors for image preview -->
-    <color name="owncloud_blue_transparent">#201D2D44</color>
-    <color name="owncloud_blue_dark_transparent">#40162233</color>
+    <color name="owncloud_blue_transparent">#10072c</color>
+    <color name="owncloud_blue_dark_transparent">#080316</color>
 </resources>
