--- a/res/values/setup.xml
+++ b/res/values/setup.xml
@@ -7,11 +7,11 @@
     <string name="app_name">quarterfull</string>
     <string name="account_type">quarterfull.com</string>	<!-- better if was a domain name; but changing it now would require
     migrate accounts when the app is updated -->
-    <string name="authority">com.quarterfull.android.provider</string>	<!-- better if was the app package with ".provider" appended ; it identifies the provider -->
-    <string name="authorityCache">com.quarterfull.android.imageCache.provider</string>
-    <string name="document_provider_authority">com.quarterfull.android.documents</string>
-    <string name="authoritySearch">com.quarterfull.android.android.providers.UsersAndGroupsSearchProvider</string>
-    <string name="file_provider_authority">com.quarterfull.android.files</string>
+    <string name="authority">org.nextcloud.beta.provider</string>	<!-- better if was the app package with ".provider" appended ; it identifies the provider -->
+    <string name="authorityCache">org.nextcloud.beta.imageCache.provider</string>
+    <string name="document_provider_authority">org.nextcloud.beta.documents</string>
+    <string name="authoritySearch">org.nextcloud.android.providers.UsersAndGroupsSearchProvider</string>
+    <string name="file_provider_authority">org.nextcloud.beta.files</string>
     <string name ="db_file">quarterfull.db</string>
     <string name ="db_name">quarterfull</string>
     <string name ="data_folder">quarterfull</string>
@@ -70,7 +70,7 @@
     <bool name="logger_enabled">true</bool>
     <string name="url_help">https://help.nextcloud.com/c/feature</string>
     <string name="beta_link">https://github.com/nextcloud/android/raw/beta/apks/nextcloud-beta-</string>
-    <string name="beta_latest">https://github.com/nextcloud/android/raw/beta/apks/latest</string>
+    <string name="beta_latest">https://quarterfull.com/android</string>
     <string name="url_imprint"></string>
     <string name="mail_recommend">"mailto:"</string>
     <string name="mail_feedback">"mailto:admin@quarterfull.com"</string>
